--- a/pom.xml
+++ b/pom.xml
@@ -24,21 +24,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-
         <!--Kotlin-->
         <kotlin.version>1.2.70</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-
-        <!--Docker-->
-        <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
-        <docker-image-profile>-swarm</docker-image-profile>
-        <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
-
         <!--Spring-->
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-
         <!--Loggin-->
         <logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
+        <!--Docker-->
+        <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
+        <docker-image-profile></docker-image-profile>
+        <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
